--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -159,7 +159,15 @@ input, select, textarea {
 	}
 
 	p {
-		margin: 0 0 2em 0;
+		/* margin: 0 0 2em 0; */
+
+		margin: auto;
+        width: 60%;
+    
+        padding: 10px;
+        display: flex;
+        justify-content: center;
+        gap: 40px;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
